<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/clear"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                app:backgroundTint="@android:color/holo_red_light"/>

            <Button
                android:id="@+id/paranthesisBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/paranthesis"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/exponentBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/exponent"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="30dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="30dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
<!--            Widget.MaterialComponents.Button.OutlinedButton-->
            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/subtractBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/subtract"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/add"
                android:background="@drawable/circle"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/PlusOrMinusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/PlusOrMinus"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textSize="24sp" />

            <Button
                android:id="@+id/decimalBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/decimal"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/equals"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                app:backgroundTint="#48D54E"
                android:textSize="24sp"/>
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:inputType="none"
        android:textSize="36sp"
        android:textAlignment="textEnd"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/backspaceBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/circle"
        android:src="@drawable/backspace"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>